# intent-outreach

./: .env.example  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GCP_SETUP.md  GITHUB_SETUP.sh  MIGRATION-SUMMARY.md  README.md  SECURITY.md  SUPPORT.md  check_ops.sh  cli.ts  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json
.beads/: metadata.json
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
000-docs/: 000-INDEX.md  0000-IDX-index.md  0000-INDEX.md  0001-PP-PROJ-project-overview.md  0001-RA-AUDT-adk-migration-audit.md  0002-LS-PROG-migration-captain-progress.md  0004-DR-TECH-google-agent-frameworks-comparison.md  0004-SEC-secret-manager-map.md  0006-OD-CICD-deployment-guide.md  0007-AA-DASH-dashboard-deployment-complete.md  0007-AA-RETRO-adk-migration-aar.md  001-PP-PROJ-project-overview.md  0012-DR-EXEC-agent-cards-executive-brief.md  0013-OD-DEPL-dev-engine-deployment.md  0015-AA-DIAG-autonomous-decision-diagnosis.md  0016-AA-RETRO-orchestration-fix-aar.md  0017-DR-IDS-engine-ids.md  0018-PM-TODO-tracker.md  0019-TQ-SMK-dev-engine.txt  002-PP-PROD-pipelinepilot-prd.md  0022-AA-RETRO-build-captain-deployment-aar.md  0023-TQ-BUILD-logs.txt  0024-AA-AAR-functions-gen2-investigation.md  0025-LS-CAPT-build-captain-final-report.md  0026-PM-HAND-next-steps-handoff.md  0027-DR-EXEC-complete-project-status.md  0028-AA-DEPL-firebase-functions-deployment-success.md  0029-AA-P1ST-phase1-stripe-integration.md  (+34 more)
(+238 files in other folders)
